--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
+@import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Euphoria+Script|Gugi|Lora");
+
+@import url("https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap");
+
+* {
+  margin: 0;
+}
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Sarala", sans-serif;
 }
 
 a {
