--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,7 +1,39 @@
 .aboutContainer {
   display: flex;
-  height: 100%;
+  /* min-height: 100vh; */
+  /* width: 100vw; */
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.aboutTitle {
+  font-size: 4rem;
+  margin-bottom: 3rem;
+}
+.aboutContent {
+  box-sizing: border-box;
+  width: 50%;
+  padding: rem;
+  margin: 0 2rem;
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.aboutContent > span {
+  text-align: center;
+  line-height: 2rem;
+  font-size: 1.5rem;
+}
+.resume {
+  padding: 10px 20px;
+  outline: none;
+  border: none;
+  border-radius: 32px;
+  font-family: "Sarala", sans-serif;
+  background: linear-gradient(145deg, #f0f0f0, #cacaca);
+  box-shadow: 7px 7px 3px #d3d3d3, -7px -7px 3px #ededed;
 }
