--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   display: flex;
   min-height: 100vh;
-  width: 100vw;
+  /* width: 100vw; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
