--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,11 +1,12 @@
 .projectContainer {
-  margin-top: 10rem;
+  /* margin-top: 1rem; */
   overflow: auto;
   height: 100%;
   box-sizing: border-box;
   padding: 1rem;
   text-align: center;
   display: flex;
+  gap: 1rem;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-evenly;
@@ -17,52 +18,76 @@
 }
 
 .projectsContainer {
+  /* display: grid; */
+  /* grid-template-columns: repeat(auto-fit, minmax(240px, 0.5fr)); */
+  /* align-items: center; */
+  /* justify-content: space-evenly; */
+  /* height: 100%; */
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  gap: 20px;
   align-items: center;
+  justify-content: space-evenly;
 }
 
 .card {
-  background-color: red;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  border-radius: 15px;
-  grid-template-areas: "informationsas, imageses";
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  /* box-sizing: border-box; */
-  /* margin: 20px; */
+  box-sizing: border-box;
+  /* border-radius: 15px; */
+  margin: 0 10px;
+  padding: 1rem;
+  height: 700px;
+  /* -webkit-box-shadow: 0px 10px 23px -5px rgba(0, 0, 0, 0.64); */
+  /* box-shadow: 0px 10px 23px -5px rgba(0, 0, 0, 0.64); */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border-radius: 18px;
+  backdrop-filter: blur(4px);
+  background-color: rgba(240, 240, 240, 0.338);
+  box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px;
+  border: 0px rgba(255, 255, 255, 0.4) solid;
+  border-bottom: 0px rgba(40, 40, 40, 0.35) solid;
+  border-right: 0px rgba(40, 40, 40, 0.35) solid;
+  /* align-items: center; */
+  /* max-height: 650px; */
 }
 
 .information {
-  /* grid-area: informationsas; */
-  grid-column: 1/2;
-  height: 100%;
   box-sizing: border-box;
-  margin: 10px;
+  /* margin: 2rem; */
+  overflow: hidden;
   display: flex;
+  flex-grow: 1;
+  flex-wrap: wrap;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  text-align: center;
-}
-.information > h2 {
-  flex: 0.25;
+  gap: 20px;
+  /* height: 100%; */
 }
 
-.images {
-  /* height: 100%; */
-  box-sizing: border-box;
-  margin: 10px;
-  /* border-radius: 10px; */
-  /* position: absolute;  */
-  /* width: 100%; */
-  grid-column: 2/3;
-  /* grid-area: imageses; */
-  /* box-sizing: border-box; */
-  /* margin: 1rem; */
+.information > h2 {
+  font-size: 2rem;
+  margin-top: 10px;
 }
+.description {
+  flex-grow: 1;
+  font-size: 0.9rem;
+}
+.tools {
+  font-size: 0.9rem;
+  margin-bottom: 2rem;
+}
+
 .images > img {
-  border-radius: 10px;
+  width: 100%;
+  /* height: 250px; */
+  object-fit: cover;
+  display: block;
+}
+
+.links {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
