--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -8,6 +8,9 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  backdrop-filter: blur(50px);
+  margin-bottom: 1rem;
+  flex: 1;
 }
 
 .maintitle {
@@ -26,7 +29,60 @@
   list-style: none;
 }
 
+.hamburger {
+  display: none;
+}
+
 .navLinks {
   /* color: red; */
   font-size: 1.5rem;
+  cursor: pointer;
+}
+.activeLinks {
+  cursor: pointer;
+  color: red;
+  font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 750px) {
+  /* .navcontainer {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  } */
+
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    backdrop-filter: blur(40px);
+    margin-bottom: 1rem;
+    /* height: 100%; */
+  }
+  .navcontainer {
+    backdrop-filter: blur(40px);
+    z-index: 10;
+    margin-bottom: 0rem;
+    position: relative;
+  }
+  .navsection {
+    backdrop-filter: blur(20px);
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .maintitle {
+    font-size: 2.5rem;
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+  .containHamburger:hover {
+    color: red;
+    background-color: red;
+  }
 }
