--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,7 +1,7 @@
 .projectContainer {
-  /* margin-top: 1rem; */
-  overflow: auto;
-  height: 100%;
+  margin-top: 7rem;
+  /* overflow: hidden; */
+  /* height: 100%; */
   box-sizing: border-box;
   padding: 1rem;
   text-align: center;
@@ -15,6 +15,14 @@
 .projectsHeader {
   font-size: 3rem;
   margin-bottom: 3rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.projectsHeader > h2 {
+  text-align: center;
 }
 
 .projectsContainer {
@@ -90,4 +98,10 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+@media screen and (max-width: 750px) {
+  .projectContainer{
+    margin-top: 1rem;
+  }
 }
