--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -85,4 +85,27 @@
     color: red;
     background-color: red;
   }
+  .burger_menu {
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 10px;
+    background: black;
+    /* border: 2px black; */
+    border-radius: 5px;
+    transition: all 0.5s ease-in-out;
+  }
+  .burger_menu::before,
+  .burger_menu::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: black;
+    border-radius: 5px;
+  }
 }
