--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -98,10 +98,22 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  cursor: pointer;
+}
+.links:hover{
+  color: red;
+  background-color: red;
+}
+
+.webLinks {
+  cursor: pointer;
+}
+.webLinks:hover {
+  color: red;
 }
 
 @media screen and (max-width: 750px) {
-  .projectContainer{
+  .projectContainer {
     margin-top: 1rem;
   }
 }
