--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,8 +2,8 @@
   box-sizing: border-box;
   padding: 1rem;
   width: 100vw;
+  position: sticky;
   top: 0;
-  position: fixed;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -45,26 +45,30 @@
 }
 
 @media only screen and (max-width: 750px) {
-  /* .navcontainer {
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-  } */
+  .navcontainer {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    transition: all 1s ease-in-out;
+    /* overflow: hidden; */
+  }
 
   .navbar {
+    display: none;
+  }
+  .navbar_open {
+    transition: all 1s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     backdrop-filter: blur(40px);
     margin-bottom: 1rem;
-    /* height: 100%; */
+    list-style: none;
   }
+
   .navcontainer {
     backdrop-filter: blur(40px);
-    z-index: 10;
-    margin-bottom: 0rem;
-    position: relative;
   }
   .navsection {
     backdrop-filter: blur(20px);
@@ -91,8 +95,7 @@
     right: 0;
     width: 50px;
     height: 10px;
-    background: black;
-    /* border: 2px black; */
+    background: #575757;
     border-radius: 5px;
     transition: all 0.5s ease-in-out;
   }
@@ -104,8 +107,47 @@
     right: 0;
     width: 50px;
     height: 10px;
+    background-color: #575757;
     border-radius: 5px;
-    background-color: black;
+  }
+  .burger_menu::before {
+    transform: translateY(-15px);
+  }
+  .burger_menu::after {
+    transform: translateY(15px);
+  }
+
+  .burger_menu_open {
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 10px;
+    background: #575757;
     border-radius: 5px;
+    transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    transform: translateX(-50px);
+    background: transparent;
+    box-shadow: none;
+  }
+
+  .burger_menu_open::before,
+  .burger_menu_open::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 10px;
+    background-color: #575757;
+    border-radius: 5px;
+  }
+
+  .burger_menu_open::before {
+    transform: rotate(45deg) translate(35px, -35px);
+  }
+  .burger_menu_open::after {
+    transform: rotate(-45deg) translate(35px, 35px);
   }
 }
