Got the action resolved

--- a/styles/Art.module.css
+++ b/styles/Art.module.css
@@ -1,6 +1,7 @@
 .artContainer {
   height: 100%;
   margin-top: 10rem;
+  text-align: center;
 }
 
 .artHeader {
@@ -34,4 +35,10 @@
 .artImg > img {
   width: 100%;
   height: 100%;
+}
+
+@media screen and (max-width: 750px) {
+  .artImg {
+    width: auto;
+  }
 }
