--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -46,15 +46,18 @@
 
 @media only screen and (max-width: 750px) {
   .navcontainer {
-    position: sticky;
+    position: fixed;
     top: 0;
+    height: auto;
     z-index: 2;
     transition: all 1s ease-in-out;
-    /* overflow: hidden; */
+    height: auto;
+    overflow: none;
   }
 
   .navbar {
     display: none;
+    transition: all 0.5s ease-in-out;
   }
   .navbar_open {
     transition: all 1s ease-in-out;
