--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   padding: 1rem;
   width: 100vw;
-  position: sticky;
+  position: fixed;
   top: 0;
   display: flex;
   flex-direction: column;
