--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -32,7 +32,7 @@
   /* justify-content: space-evenly; */
   /* height: 100%; */
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(auto, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
   gap: 20px;
   align-items: center;
   justify-content: space-evenly;
@@ -106,4 +106,10 @@
 }
 .webLinks:hover {
   color: red;
+}
+
+@media only screen and (max-width: 449px) {
+  .projectsContainer {
+    grid-template-columns: repeat(auto-fill, minmax(auto, 1fr));
+  }
 }
