--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -69,6 +69,7 @@
     backdrop-filter: blur(40px);
     margin-bottom: 1rem;
     list-style: none;
+    background: transparent;
   }
 
   .navcontainer {
