--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -41,8 +41,19 @@
 }
 .activeLinks {
   cursor: pointer;
-  color: red;
+  position: relative;
   font-size: 1.5rem;
+  transition: all 0.5s ease-in-out;
+}
+.activeLinks::before {
+  position: absolute;
+  content: "";
+  background-color: black;
+  height: 5px;
+  width: 100%;
+  border-radius: 10px;
+  transform: translateY(40px);
+  transition: all 0.5s ease-out;
 }
 
 @media only screen and (max-width: 750px) {
@@ -55,6 +66,10 @@
     height: auto;
     overflow: none;
     backdrop-filter: blur(40px);
+  }
+  .maintitle {
+    font-size: 5px;
+    margin: 0;
   }
 
   .navbar {
@@ -87,6 +102,11 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  .navLinks > li {
+    background: transparent;
+    backdrop-filter: blur(20px);
+  }
   .maintitle {
     font-size: 2.5rem;
   }
@@ -103,8 +123,8 @@
     position: relative;
     top: 0;
     right: 0;
-    width: 50px;
-    height: 10px;
+    width: 35px;
+    height: 5px;
     background: #575757;
     border-radius: 5px;
     transition: all 0.5s ease-in-out;
@@ -115,8 +135,8 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 50px;
-    height: 10px;
+    width: 35px;
+    height: 5px;
     background-color: #575757;
     border-radius: 5px;
   }
@@ -131,8 +151,8 @@
     position: relative;
     top: 0;
     right: 0;
-    width: 50px;
-    height: 10px;
+    width: 35px;
+    height: 5px;
     background: #575757;
     border-radius: 5px;
     transition: all 0.5s ease-in-out;
@@ -148,8 +168,8 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 50px;
-    height: 10px;
+    width: 35px;
+    height: 5px;
     background-color: #575757;
     border-radius: 5px;
   }
@@ -159,5 +179,16 @@
   }
   .burger_menu_open::after {
     transform: rotate(-45deg) translate(35px, 35px);
+  }
+
+  .activeLinks::before {
+    position: absolute;
+    content: "";
+    background-color: black;
+    height: 5px;
+    /* width: 100%; */
+    border-radius: 10px;
+    transform: translateY(35px);
+    transition: all 0.5s ease-out;
   }
 }
