--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -111,5 +111,9 @@
 @media only screen and (max-width: 449px) {
   .projectsContainer {
     grid-template-columns: repeat(auto-fill, minmax(auto, 1fr));
+    /* margin: auto; */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    scroll-behavior: smooth;
   }
 }
