--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -32,9 +32,10 @@
   /* align-items: center; */
   /* justify-content: space-evenly; */
   /* height: 100%; */
+  width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(456px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
   gap: 20px;
   align-items: center;
   justify-content: space-evenly;
