--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,8 +1,5 @@
 .projectContainer {
   margin-top: 7rem;
-  overflow: hidden;
-  z-index: 0;
-  /* height: 100%; */
   box-sizing: border-box;
   padding: 1rem;
   text-align: center;
@@ -115,6 +112,19 @@
   .projectsContainer {
     grid-template-columns: repeat(auto-fill, minmax(auto, 1fr));
     /* margin: auto; */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    scroll-behavior: smooth;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .projectContainer {
+    margin-top: 9rem;
+  }
+  .projectsContainer {
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    margin-top: auto;
     scrollbar-width: none;
     -ms-overflow-style: none;
     scroll-behavior: smooth;
