--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -2,7 +2,7 @@
   display: flex;
   /* min-height: 100vh; */
   /* width: 100vw; */
-  flex-direction: column;
+
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
@@ -39,10 +39,32 @@
   box-shadow: 7px 7px 3px #d3d3d3, -7px -7px 3px #ededed;
 }
 
+.skillset li {
+  list-style-type: none;
+  text-decoration: none;
+}
+
 @media screen and (max-width: 750px) {
   .aboutContent {
     margin: auto;
     /* padding: 1rem; */
     width: 100%;
   }
+}
+
+.skillset {
+  list-style-type: none;
+  width: 50vw;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.skillset > li {
+  color: white;
+  padding: 10px;
+  background-color: rgb(140, 140, 140);
+  border-radius: 20px;
+  margin-right: 5px;
 }
