--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,33 +1,19 @@
 @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Euphoria+Script|Gugi|Lora");
-
 @import url("https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap");
+@import url("https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css");
 
-* {
-  margin: 0;
-}
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: "Sarala", sans-serif;
-  background-color: #f0f0f0;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-  scroll-behavior: smooth;
-}
-body::-webkit-scrollbar,
-html::-webkit-scrollbar {
-  display: none;
-  scrollbar-width: none;
+.bx {
+  color: #f5f5f5;
+  font-size: 32px;
+  transition: ease-in-out 0.25s;
+  border-radius: 20px;
+  padding: 5px;
+  cursor: pointer;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.bx:hover {
+  color: #151515;
+  background-color: #f5f5f5;
+  border-radius: 20px;
+  padding: 5px;
 }
-
-* {
-  box-sizing: border-box;
-}
-
-
